# arxiv-paper-search-chatbot

./: .gitignore  L3.ipynb  README.md  RESEARCH_SERVER_GUIDE.md  SAP_Workflow_Guide.md  mcp_chatbot.py  notebook.ipynb  pyproject.toml  requirements.txt  research_server.py  test_tool.py
papers/alzheimer's_disease/: papers_info.json
papers/oncology/: papers_info.json
sap/_index/: studies_index.json
sap/phase_iii_oncology_melanoma/: studies_info.json
